tests/sksl/errors/StaticSwitchWithConditionalContinue.dsl.glsl
### Compilation failed:

error: static switch contains non-static conditional exit

1 error
